# BankChurn-DeepLearning_project

./: .gitignore  README.md  app.py  experiments.ipynb  feature_transformation.ipynb  model.h5  prediction.ipynb  pyproject.toml  regression.ipynb  regressionmodel.h5  requirements.txt
.github/workflows/: ping.yml
logs/fit/train/: events.out.tfevents.1756110688.NAKUL.1852.0.v2  events.out.tfevents.1756110752.NAKUL.1852.2.v2  events.out.tfevents.1756110853.NAKUL.1852.4.v2
logs/fit/validation/: events.out.tfevents.1756110693.NAKUL.1852.1.v2  events.out.tfevents.1756110753.NAKUL.1852.3.v2  events.out.tfevents.1756110854.NAKUL.1852.5.v2
logs/fit20250825-141445/train/: events.out.tfevents.1756111485.NAKUL.1852.6.v2
logs/fit20250825-141445/validation/: events.out.tfevents.1756111487.NAKUL.1852.7.v2
logs/fit20250825-141627/train/: events.out.tfevents.1756111588.NAKUL.1852.8.v2
logs/fit20250825-141627/validation/: events.out.tfevents.1756111590.NAKUL.1852.9.v2
logs/fit20250825-142138/train/: events.out.tfevents.1756111898.NAKUL.1852.10.v2
logs/fit20250825-142138/validation/: events.out.tfevents.1756111900.NAKUL.1852.11.v2
logs/fit20250825-143558/train/: events.out.tfevents.1756112758.NAKUL.1852.12.v2
logs/fit20250825-143558/validation/: events.out.tfevents.1756112761.NAKUL.1852.13.v2
logs/fit20250825-144308/train/: events.out.tfevents.1756113188.NAKUL.1852.14.v2
logs/fit20250825-144308/validation/: events.out.tfevents.1756113190.NAKUL.1852.15.v2
regressionlogs/fit/train/: events.out.tfevents.1756125208.NAKUL.33696.0.v2
(+5 files in other folders)
