[tool.poetry]
name = "bankchurn"
version = "0.1.0"
description = "Bank Churn Prediction Streamlit App"
authors = ["nakulkejriwal@gmail.com"]
readme = "README.md"
packages = [] 
python = ">=3.12"

[tool.poetry.dependencies]
python = ">=3.12"
scikit-learn = "*"
tensorflow = "*"
matplotlib = "*"
numpy = "*"
pandas = "*"
tensorboard = "*"
streamlit = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
